fix/align-arrow-with-toggle-properties

--- a/frontend/app/less/editor.less
+++ b/frontend/app/less/editor.less
@@ -15,9 +15,13 @@
   vertical-align: middle;
   width: 15%;
 }
+
 .EditorHeader-properties {
   display: table-cell;
   vertical-align: middle;
+  width: 8%;
+  text-align: right;
+  padding-right: 1.5em;
 }
 
 .EditorHeader-back {
